<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_admin_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/admin_mode" />

        <TextView
            android:id="@+id/view_app_title"
            android:layout_width="520dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_title" />

        <Button
            android:id="@+id/btn_dbinfo"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_view_dbinfo" />

        <Button
            android:id="@+id/btn_content_manage"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_view_content_manage" />

        <Button
            android:id="@+id/btn_admin_conver_to_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/conver_mode_adminTonormal" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>