<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_view_back" />

        <TextView
            android:id="@+id/view_help_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_content" />

        <Button
            android:id="@+id/btn_convert_to_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_mode_normalToadmin" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>