<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_admin_mode_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/admin_mode" />

        <Button
            android:id="@+id/btn_back_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_view_back" />

        <ImageView
            android:id="@+id/admin_cam"
            android:layout_width="520dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/admin_feedback"
            android:layout_width="520dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="TextView" />

        <Button
            android:id="@+id/btn_record_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:text="@string/btn_record" />

        <Button
            android:id="@+id/btn_convert_to_normal_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conver_mode_adminTonormal" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>