<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ManageActivity">

    <TextView
        android:id="@+id/view_admin_manage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="59dp"
        android:gravity="center"
        android:text="@string/admin_mode"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_manage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="388dp"
        android:layout_weight="1"
        android:text="@string/btn_add_video"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_delete_video"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_delete_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:text="@string/btn_delete_video"
        app:layout_constraintStart_toStartOf="@+id/btn_add_video"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_back_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_back"
        app:layout_constraintStart_toStartOf="@+id/view_admin_manage"
        app:layout_constraintTop_toBottomOf="@+id/view_admin_manage" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_manage"
        android:layout_width="600dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="306dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_convert_to_admin_manage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_admin_manage">

    </android.support.v7.widget.RecyclerView>

    <ListView
        android:id="@+id/manage_list"
        android:layout_width="600dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:choiceMode="singleChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_convert_to_admin_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conver_mode_adminTonormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_manage" />
</android.support.constraint.ConstraintLayout>